added next shape functionality added NextShapePanel and HeldShapePanel classes small code structure refactor